create card upon uploading the card image
